--- a/character/character.html
+++ b/character/character.html
@@ -484,19 +484,10 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         <div id="tactic-examples-list" class="posts-list" style="margin-top:12px;"></div>
     </div>
 
-        <!-- 광고 -->
-  <div class="ads-container responsive-padding">
-    <ins class="adsbygoogle"
-        style="display:block"
-        data-ad-format="horizontal"
-        data-full-width-responsive="true"
-        data-ad-client="ca-pub-5862324369257695"
-        data-ad-slot="9244892982"></ins>
-    </div>
-    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-  </div>
+    <!-- 최하단 광고-->
+    <div style="height: 24px;"></div>
     
-    <div id="ad-unit-bottom" class="AD-bottom" style="margin-top: 24px; text-align: center; align-items: center; display: flex; justify-content: center;"> 
+    <div id="ad-unit-bottom" class="AD-bottom" style="text-align: center; align-items: center; display: flex; justify-content: center;"> 
     <ins class="adsbygoogle"
         style="display:inline-block;width:970px;height:90px"
         data-ad-client="ca-pub-5862324369257695"
@@ -504,7 +495,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
     </div>
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+   </script>
     <div style="height: 12px;"></div>
     <!---->
     <style>
@@ -513,13 +504,6 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 display: none !important;
             }
         }
-        @media (min-width: 1440px) {
-            .ads-container {
-                display: none !important;
-            }
-        }
-        .responsive-padding { margin: 20px 20px 20px 0; padding: 0 0; }
-        @media (max-width: 1200px) { .responsive-padding {margin: 20px 0 0px 0; padding: 0; } }
     </style>
 
     <script>
