--- a/apps/tactic/tactics.html
+++ b/apps/tactic/tactics.html
@@ -101,12 +101,11 @@ description: 페르소나5 더 팬텀 X 택틱들을 확인하세요.
         <!-- 광고 -->
   <div class="ads-container responsive-padding">
     <ins class="adsbygoogle"
-        style="display:block"
-        data-ad-format="horizontal"
-        data-full-width-responsive="true"
-        data-ad-client="ca-pub-5862324369257695"
-        data-ad-slot="9244892982"></ins>
-    </div>
+      style="display:block"
+      data-ad-format="fluid"
+      data-ad-layout-key="-gc+3n+7a-ag-4h"
+      data-ad-client="ca-pub-5862324369257695"
+      data-ad-slot="5373524213"></ins>
     <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
   </div>
     
