--- a/character/character.html
+++ b/character/character.html
@@ -353,6 +353,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                             <span class="label">속도</span>
                             <span class="value"></span>
                         </div>
+                        <!--
                         <div class="stat-row">
                             <span class="label">크리티컬 확률</span>
                             <span class="value"></span>
@@ -360,7 +361,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                         <div class="stat-row">
                             <span class="label">크리티컬 효과</span>
                             <span class="value"></span>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
             </div>
