--- a/apps/persona/index.html
+++ b/apps/persona/index.html
@@ -910,7 +910,7 @@ alternate_urls:
             const highlightLabels = {
                 'kr': 'HIGHLIGHT',
                 'en': 'HIGHLIGHT', 
-                'jp': 'ハイライト'
+                'jp': 'HIGHLIGHT'
             };
             const highlightLabel = highlightLabels[currentLang] || 'HIGHLIGHT';
             
