--- a/character/index.html
+++ b/character/index.html
@@ -1041,7 +1041,9 @@ redirect_from:
             '풍리코' : '타네무라 리코·매화',
             '풍타뉴' : '코토네 몽타뉴·백조',
             '백타뉴' : '코토네 몽타뉴·백조',
-            '3주' : '유키 마코토'
+            '3주' : '유키 마코토',
+            '센세': '카타야마 쿠미',
+            '선생': '카타야마 쿠미'
         };
 
         // 검색 기능 구현
