--- a/character/character.html
+++ b/character/character.html
@@ -1227,7 +1227,8 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
             const weaponTypes = [
                 { key: 'weapon5-1', suffix: '5-01', stars: 5 },
                 { key: 'weapon4-1', suffix: '4-01', stars: 4 },
-                { key: 'weapon4-2', suffix: '4-02', stars: 4 }
+                { key: 'weapon4-2', suffix: '4-02', stars: 4 },
+                { key: 'weapon3-1', suffix: '3-01', stars: 3 }
             ];
 
             for (const weapon of weaponTypes) {
