--- a/apps/persona/index.html
+++ b/apps/persona/index.html
@@ -614,15 +614,15 @@ alternate_urls:
         
         const seoData = {
             'kr': {
-                title: '주요 페르소나 - 페르소나5 더 팬텀 X 루페르넷',
+                title: '주요 페르소나 - 페르소나5 더 팬텀 X',
                 description: '페르소나5 더 팬텀 X의 주요 페르소나 정보. 본능, 고유 스킬, 추천 스킬 정보를 확인하세요.'
             },
             'en': {
-                title: 'Core Personas - Persona 5: The Phantom X LufelNet',
+                title: 'Core Personas Build & Guide - Persona 5: The Phantom X',
                 description: 'Core Persona information for Persona 5: The Phantom X. Check instinct, unique skills, and recommended skills.'
             },
             'jp': {
-                title: '主要ペルソナ - ペルソナ5 ザ・ファントム X LufelNet',
+                title: '主要ペルソナ 攻略 - ペルソナ5 ザ・ファントム X',
                 description: 'ペルソナ5 ザ・ファントム Xの主要ペルソナ情報。本能、固有スキル、推奨スキル情報をご確認ください。'
             }
         };
