--- a/apps/revelations/index.html
+++ b/apps/revelations/index.html
@@ -455,7 +455,7 @@ alternate_urls:
                 description: '페르소나5 더 팬텀 X의 계시 정보. 세트 효과와 추가 효과를 확인하세요.'
             },
             'en': {
-                title: 'Revelations - Persona 5: The Phantom X LufelNet',
+                title: 'Revelations Card Guide - Persona 5: The Phantom X LufelNet',
                 description: 'Revelation information for Persona 5: The Phantom X. Check set effects and additional effects.'
             },
             'jp': {
