--- a/character/index.html
+++ b/character/index.html
@@ -459,7 +459,7 @@ redirect_from:
                 description: '페르소나5 더 팬텀 X의 괴도별 육성 가이드. 추천 세팅, 스킬, 의식, 전용무기 정보를 확인하세요.'
             },
             'en': {
-                title: 'Character Guide - Persona 5: The Phantom X LufelNet',
+                title: 'Character Build Guide - Persona 5: The Phantom X LufelNet',
                 description: 'Character development guide for Persona 5: The Phantom X. Check recommended setup, skills, awareness, and exclusive weapon info.'
             },
             'jp': {
