--- a/apps/defense-calc/index.html
+++ b/apps/defense-calc/index.html
@@ -278,7 +278,7 @@ redirect_from:
                 defense_reduce_desc: '※ 보스 방어 계수 - 방어력 감소',
                 final_damage_increase: '최종 대미지 증가',
                 tooltip_formula: '대미지 배수 : 1 - [방어력 × 방어 계수 / (방어력× 방어 계수 + 1400)]',
-                base_final_damage: '· 기본 최종 대미지 배수:',
+                base_final_damage: '· 방어력에 의한 최종 대미지 배수:',
                 with_def_reduce: '· 방어력 감소 최종 대미지 배수:',
                 tab_pierce: '관통',
                 tab_defense: '방어력 감소',
