--- a/apps/defense-calc/index.html
+++ b/apps/defense-calc/index.html
@@ -111,9 +111,9 @@ redirect_from:
             <div class="damage-card card-style top-row-2-damage" style="grid-column: 5; display:none;">
                 <h2 id="final-damage-increase-title">최종 대미지 증가 <span class="tooltip-icon" id="finalDamageTooltip" data-tooltip="대미지 배수 : 1 - [방어력 × 방어 계수 / (방어력× 방어 계수 + 1400)]">?</span></h2>
                 <div class="damage-increase"></div>
-                <div class="damage-formula">
-                    <!-- <div class="formula-row"><span id="withDefReduceLabel">· 방어력 감소 최종 대미지 배수:</span> <span id="withDefReduce">-</span></div>-->
-                </div>
+                <!--<div class="damage-formula">
+                     <div class="formula-row"><span id="withDefReduceLabel">· 방어력 감소 최종 대미지 배수:</span> <span id="withDefReduce">-</span></div>
+                </div>-->
             </div>
         </div>
     </div>
