--- a/apps/defense-calc/index.html
+++ b/apps/defense-calc/index.html
@@ -51,12 +51,12 @@ redirect_from:
                 <div class="boss-custom-inputs">
                     <div class="input-group">
                         <label for="baseDefenseInput" id="baseDefenseLabel">· 기본 방어력:</label>
-                        <input type="number" id="baseDefenseInput" min="0" step="1" placeholder="미확인" />
+                        <input type="number" id="baseDefenseInput" min="0" step="1" placeholder="-" />
                     </div>
                     <div class="input-group">
                         <label for="defenseCoefInput" id="defenseCoefLabel">· 보스 방어 계수:</label>
                         <div class="inline-input">
-                            <input type="number" id="defenseCoefInput" min="0" step="0.1" placeholder="미확인" />
+                            <input type="number" id="defenseCoefInput" min="0" step="0.1" placeholder="-" />
                             <span class="unit">%</span>
                         </div>
                     </div>
