--- a/apps/defense-calc/index.html
+++ b/apps/defense-calc/index.html
@@ -197,7 +197,7 @@ redirect_from:
     <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
   </div>
     
-    <div id="ad-unit-bottom" class="AD-bottom" style="margin-top: 24px; text-align: center; align-items: center; display: flex; justify-content: center;"> 
+    <div id="ad-unit-bottom" class="AD-bottom" style="margin-top: 32px; text-align: center; align-items: center; display: flex; justify-content: center;"> 
     <ins class="adsbygoogle"
         style="display:inline-block;width:970px;height:90px"
         data-ad-client="ca-pub-5862324369257695"
@@ -309,5 +309,18 @@ redirect_from:
         if (ogTitle) ogTitle.setAttribute('content', currentSEO.title);
         if (ogDescription) ogDescription.setAttribute('content', currentSEO.description);
     }
+
+    // 광고 흰 박스 숨김
+    setTimeout(() => {
+        document.querySelectorAll(".adsbygoogle").forEach(el => {
+            const status = el.getAttribute("data-ad-status");
+            const adslot = el.getAttribute("data-ad-slot");
+            //console.log("google status", status);
+            //console.log("google adslot", adslot);
+            if (status === "unfilled" || el.querySelector("iframe") === null) {
+                el.style.display = "none";
+            }
+        });
+    }, 2000);  // 광고 로딩 기다렸다가 2초 후 검사
 </script>
 
