--- a/apps/defense-calc/index.html
+++ b/apps/defense-calc/index.html
@@ -42,7 +42,7 @@ redirect_from:
         <!-- Row 1: Boss card full width -->
         <div class="top-row-1">
             <div class="boss-card card-style">
-                <h2 id="boss-info-title">보스 정보</h2>
+                <h2 id="boss-info-title">보스 정보 <span class="tooltip-icon" id="bossInfoTooltip" data-tooltip="최고 난이도 기준 값이며, 같은 이름이더라도 보스마다 방어력 값은 다를 수 있습니다. 참조용 데이터이며 정확한 수치는 아닙니다.">?</span></h2>
                 <div class="boss-select-container">
                     <select id="bossSelect">
                         <option value="" id="bossSelectPlaceholder">보스 선택</option>
