--- a/apps/defense-calc/index.html
+++ b/apps/defense-calc/index.html
@@ -165,6 +165,13 @@ redirect_from:
 
         <!-- defense table -->
         <div class="tab-content" id="defense-tab">
+            <div class="reduce-input-container">
+                <div class="reduce-input-group">
+                    <label id="otherReduceLabel">기타 방어력 감소</label>
+                    <input type="number" id="otherReduce" min="0" step="0.1" value="0">
+                    <span>%</span>
+                </div>
+            </div>
             <div class="defense-table-container">
                 <table class="defense-table">
                     <thead>
