--- a/apps/pull-tracker/index.html
+++ b/apps/pull-tracker/index.html
@@ -55,7 +55,7 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
     <!-- Stats Cards -->
     <section class="summary-cards" style="margin-top:8px;">
         <!--<h2 id="cardsTitle" style="margin:0 0 12px 0;">Stats (Last 90 Days)</h2>-->
-        <div id="cards" class="cards-grid" data-example="{{ site.baseurl }}/apps/pull-tracker/example.json"></div>
+        <div id="cards" class="cards-grid"></div>
     </section>
 
     <style>
