--- a/apps/pull-tracker/index.html
+++ b/apps/pull-tracker/index.html
@@ -34,6 +34,7 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
                 <input id="sourceUrl" type="url" inputmode="url" placeholder="https://..." class="url-input">
                 <button id="startBtn" class="url-btn primary">가져오기</button>
                 <button id="clearBtn" class="url-btn secondary">초기화</button>
+                <button id="exampleBtn" class="url-btn" style="display:none;">EXAMPLE</button>
             </div>
             <div id="info" class="url-info"></div>
             <div id="status" class="url-status"></div>
