--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -129,6 +129,8 @@ alternate_urls:
                             <li>카미유</li>
                             <li>ochette</li>
                             <li>kai</li>
+                            <li>Sages</li>
+                            <li>ue</li>
                         </ul>
                     </div>
                 </div>
