--- a/apps/pull-tracker/index.html
+++ b/apps/pull-tracker/index.html
@@ -6,8 +6,7 @@ title: "Pull Tracker - Persona 5: The Phantom X"
 description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회)"
 ---
 
-{% include supabase-config.html %}
-<script src="https://accounts.google.com/gsi/client" async defer></script>
+
 
 <div class="main-wrapper">
     <div class="navigation-path">
@@ -35,8 +34,6 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
                 <input id="sourceUrl" type="url" inputmode="url" placeholder="https://..." class="url-input">
                 <button id="startBtn" class="url-btn primary">가져오기</button>
                 <button id="clearBtn" class="url-btn secondary">초기화</button>
-                <button id="exampleBtn" class="url-btn" style="display:none;">EXAMPLE</button>
-                <button id="driveBtn" class="url-btn" style="display:none;">Drive 연동</button>
             </div>
             <div id="info" class="url-info"></div>
             <div id="status" class="url-status"></div>
@@ -58,7 +55,7 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
     <!-- Stats Cards -->
     <section class="summary-cards" style="margin-top:8px;">
         <!--<h2 id="cardsTitle" style="margin:0 0 12px 0;">Stats (Last 90 Days)</h2>-->
-        <div id="cards" class="cards-grid"></div>
+        <div id="cards" class="cards-grid" data-example="{{ site.baseurl }}/apps/pull-tracker/example.json"></div>
     </section>
 
     <style>
@@ -152,6 +149,10 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
     </style>
 
     <!-- modal loader removed; using inline spinner near status -->
+    <!-- Google Identity Services & GAPI for Drive API -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="https://apis.google.com/js/api.js" async defer></script>
+    <script>window.GOOGLE_CLIENT_ID = window.GOOGLE_CLIENT_ID || 'REPLACE_WITH_YOUR_GOOGLE_CLIENT_ID';</script>
     <script src="{{ site.baseurl }}/apps/pull-tracker/merge-engine.js?v={{ site.time | date: '%s' }}"></script>
     <script src="{{ site.baseurl }}/apps/pull-tracker/charts.js?v={{ site.time | date: '%s' }}"></script>
     <script src="{{ site.baseurl }}/apps/pull-tracker/pull-tracker.js?v={{ site.time | date: '%s' }}"></script>
@@ -162,7 +163,7 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
             }
             // expose base url to JS
             try { window.BASE_URL = '{{ site.baseurl }}'; } catch(_) {}
-            // init auth bar once
+            // init Google auth bar
             try { if (window.pullTrackerInitAuth) window.pullTrackerInitAuth(); } catch(_) {}
         });
     </script>
