--- a/apps/pull-tracker/index.html
+++ b/apps/pull-tracker/index.html
@@ -35,6 +35,16 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
                 <button id="startBtn" class="url-btn primary">가져오기</button>
                 <button id="clearBtn" class="url-btn secondary">초기화</button>
             </div>
+            <!-- DEBUG 전용 예시 적용 -->
+            <div id="debugExamples" style="display:none; align-items:center; gap:8px;">
+                <label for="exampleSelect" style="opacity:.85; font-size:13px;">DEBUG 예시:</label>
+                <select id="exampleSelect" class="url-input" style="flex:0 0 200px; padding:8px 10px; font-size:13px;">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                </select>
+                <button id="applyExampleBtn" class="url-btn">예시 적용</button>
+            </div>
             <div id="info" class="url-info"></div>
             <div id="status" class="url-status"></div>
             <pre id="result" class="raw-response" style="display:none;"></pre>
@@ -152,7 +162,7 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
     <!-- Google Identity Services & GAPI for Drive API -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
-    <script>window.GOOGLE_CLIENT_ID = window.GOOGLE_CLIENT_ID || 'REPLACE_WITH_YOUR_GOOGLE_CLIENT_ID';</script>
+    <script>window.GOOGLE_CLIENT_ID = window.GOOGLE_CLIENT_ID || '42431189158-0quc6ja0qm079r5gt4b6f56m4lqb930e.apps.googleusercontent.com';</script>
     <script src="{{ site.baseurl }}/apps/pull-tracker/merge-engine.js?v={{ site.time | date: '%s' }}"></script>
     <script src="{{ site.baseurl }}/apps/pull-tracker/charts.js?v={{ site.time | date: '%s' }}"></script>
     <script src="{{ site.baseurl }}/apps/pull-tracker/pull-tracker.js?v={{ site.time | date: '%s' }}"></script>
