--- a/apps/pull-tracker/index.html
+++ b/apps/pull-tracker/index.html
@@ -21,6 +21,7 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
 
     <!-- User Bar -->
     <div id="ptUserBar" class="user-info-bar" style="display:none;">
+        <img src="{{ site.baseurl }}/apps/pull-tracker/Google_Drive_Logo.png" alt="Google Drive" class="google-drive-logo" style="height:18px;">
         <span class="user-label" id="ptUserSignedAs">로그인:</span>
         <span id="ptUserName"></span>
         <button id="ptLoginBtn" class="auth-btn">로그인</button>
@@ -66,6 +67,11 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
     <section class="summary-cards" style="margin-top:8px;">
         <!--<h2 id="cardsTitle" style="margin:0 0 12px 0;">Stats (Last 90 Days)</h2>-->
         <div id="cards" class="cards-grid" data-example="{{ site.baseurl }}/apps/pull-tracker/example.json"></div>
+    </section>
+
+    <!-- Help Text -->
+    <section class="summary-cards" style="margin-top:12px;">
+        <div id="ptHelpText" class="help-text"></div>
     </section>
 
     <style>
@@ -152,10 +158,12 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
         .raw-response { margin-top:8px; padding:10px; background:#0c0806; border:1px solid rgba(255,255,255,.12); color:#e8e8e8; border-radius:8px; max-height:260px; overflow:auto; white-space:pre-wrap; word-break:break-all; }
         .hide4-toggle { display:inline-block; font-size:12px; opacity:.9; }
         /* User bar */
-        .user-info-bar { display:flex; align-items:center; gap:10px; margin:8px 20px 0px 20px; padding:8px 12px; background:rgba(255,255,255,0.06); border:1px solid rgba(255,255,255,0.12); border-radius:8px; }
+        .user-info-bar { display:flex; align-items:center; gap:10px; margin:8px 20px 20px 20px; padding:8px 12px; background:rgba(255,255,255,0.06); border:1px solid rgba(255,255,255,0.12); border-radius:8px; }
         .user-info-bar .user-label { color:rgba(255,255,255,0.85); }
         .auth-btn { background:transparent; color:#fff; border:1px solid rgba(255,255,255,0.35); padding:6px 10px; border-radius:6px; cursor:pointer; }
         .auth-btn:hover { background: rgba(255,255,255,0.08); }
+        .help-text { opacity:.85; font-size:12px; white-space:pre-line; text-align: left; margin: 20px 0px 40px 0px; padding: 12px; background: rgba(255, 255, 255, 0.05); border-radius: 8px; border: 1px solid rgba(255, 255, 255, 0.1); color: rgba(255, 255, 255, 0.6); line-height: 1.8; }
+
     </style>
 
     <!-- modal loader removed; using inline spinner near status -->
@@ -164,6 +172,7 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
     <script src="https://apis.google.com/js/api.js" async defer></script>
     <script>window.GOOGLE_CLIENT_ID = window.GOOGLE_CLIENT_ID || '42431189158-0quc6ja0qm079r5gt4b6f56m4lqb930e.apps.googleusercontent.com';</script>
     <script src="{{ site.baseurl }}/apps/pull-tracker/merge-engine.js?v={{ site.time | date: '%s' }}"></script>
+    <script src="{{ site.baseurl }}/apps/pull-tracker/lostlist.js?v={{ site.time | date: '%s' }}"></script>
     <script src="{{ site.baseurl }}/apps/pull-tracker/charts.js?v={{ site.time | date: '%s' }}"></script>
     <script src="{{ site.baseurl }}/apps/pull-tracker/pull-tracker.js?v={{ site.time | date: '%s' }}"></script>
     <script>
@@ -175,6 +184,15 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
             try { window.BASE_URL = '{{ site.baseurl }}'; } catch(_) {}
             // init Google auth bar
             try { if (window.pullTrackerInitAuth) window.pullTrackerInitAuth(); } catch(_) {}
+            // Help text i18n
+            try {
+                const el = document.getElementById('ptHelpText');
+                const lang = (new URLSearchParams(location.search).get('lang') || 'kr').toLowerCase();
+                const KR = `·  로컬 데이터는 개인 브라우저에 저장되며 인터넷 기록을 모두 삭제할 경우 데이터는 삭제됩니다.\n·  구글 드라이브 로그인을 통해 여러분의 Google Drive에서 내용을 저장하고 동기화할 수 있습니다.\n·  URL을 통해 제출된 정보는 계정 정보는 포함하지 않으며, 데이터는 통계(iant.kr/gacha)에 사용될 수 있습니다.\n·  Special Thanks To : Iant / TheROoNCo`;
+                const EN = `·  Local data is stored in your browser and will be deleted if you clear browsing data.\n·  By signing in with Google Drive, you can save and sync your data in your Google Drive.\n·  Data submitted via URL does not include account information; it may be used for statistics (iant.kr/gacha).\n·  Special Thanks To : Iant / TheROoNCo`;
+                const JP = `·  ローカルデータはお使いのブラウザに保存され、閲覧データをすべて削除すると消去されます。\n·  Google ドライブにログインすると、ご自身の Google Drive に保存・同期できます。\n·  URL で送信される情報にアカウント情報は含まれません。データは統計（iant.kr/gacha）に利用される場合があります。\n·  Special Thanks To : Iant / TheROoNCo`;
+                if (el) el.textContent = (lang==='en'?EN:(lang==='jp'?JP:KR));
+            } catch(_) {}
         });
     </script>
 </div>
