--- a/apps/pull-tracker/index.html
+++ b/apps/pull-tracker/index.html
@@ -30,11 +30,15 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
 
     <section class="card-style" style="padding:16px; position:relative;">
         <div style="display:flex; flex-direction:column; gap:12px; max-width:860px;">
-            <label for="sourceUrl" id="inputLabel" style="font-weight:600; opacity:.9;">가챠 기록 URL</label>
-            <div class="url-row">
-                <input id="sourceUrl" type="url" inputmode="url" placeholder="https://..." class="url-input">
-                <button id="startBtn" class="url-btn primary">가져오기</button>
-                <button id="clearBtn" class="url-btn secondary">초기화</button>
+            <div class="url-row" style="gap:8px;">
+                <div style="display:flex;gap:8px;align-items:center;">
+                    <button id="openGuideBtn" class="url-btn">URL 가이드</button>
+                </div>
+                <div style="display:flex;gap:8px;align-items:center;">
+                    <input id="sourceUrl" type="url" inputmode="url" placeholder="https://..." class="url-input">
+                    <button id="startBtn" class="url-btn primary">가져오기</button>
+                    <button id="clearBtn" class="url-btn secondary">초기화</button>
+                </div>
             </div>
             <!-- DEBUG 전용 예시 적용 -->
             <div id="debugExamples" style="display:none; align-items:center; gap:8px;">
@@ -126,7 +130,7 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
         .card-title-icon { object-fit:cover; height:18px; }
         .inprogress { opacity:.7; font-size:12px; }
         /* URL row */
-        .url-row { display:flex; gap:8px; align-items:center; }
+        .url-row { display:flex; gap:8px; flex-wrap: wrap; flex-direction: column;}
         .url-input { flex:1; padding:12px 14px; border-radius:10px; border:1px solid rgba(255,255,255,.18); background:#1a110e; color:#fff; outline:none; transition:border-color .15s ease; }
         .url-input:focus { border-color:#b38b6d; }
         .url-btn { padding:10px 14px; border-radius:10px; border:1px solid rgba(255,255,255,.18); background:#231510; color:#fff; cursor:pointer; }
@@ -184,6 +188,26 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
             try { window.BASE_URL = '{{ site.baseurl }}'; } catch(_) {}
             // init Google auth bar
             try { if (window.pullTrackerInitAuth) window.pullTrackerInitAuth(); } catch(_) {}
+            // SEO: 언어별 제목/설명/og 자동 설정
+            try {
+                const params = new URLSearchParams(location.search);
+                const lang = (params.get('lang')||'kr').toLowerCase();
+                const meta = {
+                    kr: { title: '계약 통계 - 페르소나5 더 팬텀 X', desc: 'P5X 가챠 계약 정보를 기록하고 통계를 확인하세요.' },
+                    en: { title: 'Pull Tracker - Persona 5: The Phantom X', desc: 'P5X Gacha Pull Tracker' },
+                    jp: { title: 'ガチャ履歴 - ペルソナ5 ザ・ファントムX', desc: 'P5Xガチャの契約情報を記録し、統計を確認してください。' }
+                };
+                const cur = meta[lang] || meta.kr;
+                document.title = cur.title;
+                const ensure = (sel, attr, prop)=>{
+                    let el = document.querySelector(sel); if (!el){ el = document.createElement('meta'); if (prop) el.setAttribute('property', prop); document.head.appendChild(el);} return el;
+                };
+                let d = document.querySelector('meta[name="description"]');
+                if (!d) { d = document.createElement('meta'); d.setAttribute('name','description'); document.head.appendChild(d); }
+                d.setAttribute('content', cur.desc);
+                let ogt = document.querySelector('meta[property="og:title"]'); if (!ogt){ ogt = document.createElement('meta'); ogt.setAttribute('property','og:title'); document.head.appendChild(ogt);} ogt.setAttribute('content', cur.title);
+                let ogd = document.querySelector('meta[property="og:description"]'); if (!ogd){ ogd = document.createElement('meta'); ogd.setAttribute('property','og:description'); document.head.appendChild(ogd);} ogd.setAttribute('content', cur.desc);
+            } catch(_) {}
             // Help text i18n
             try {
                 const el = document.getElementById('ptHelpText');
