--- a/apps/pull-tracker/index.html
+++ b/apps/pull-tracker/index.html
@@ -79,7 +79,7 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
     </section>
 
     <style>
-        .card-style { background:#140d0a; border:1px solid rgba(255,255,255,.08); border-radius:12px; margin:0 20px;}
+        .card-style { background:#3d3030; border:1px solid rgba(255,255,255,.08); border-radius:12px; margin:0 20px;}
         .summary-cards { margin:0 20px;}
         @media (max-width: 1200px) {
             .card-style, .summary-cards { margin: 0px;}
@@ -90,7 +90,7 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
         .cards-grid { display:grid; grid-template-columns: repeat(3, minmax(220px,1fr)); gap:12px; }
         @media (max-width: 1200px) { .cards-grid { grid-template-columns: repeat(2, minmax(160px,1fr)); } }
         @media (max-width: 640px) { .cards-grid { grid-template-columns: 1fr; } }
-        .stat-card { background:#0e0a08; border:1px solid rgba(255,255,255,.12); border-radius:10px; padding:16px 16px 24px 16px; }
+        .stat-card { background:#3f3135; border:1px solid rgba(255,255,255,.12); border-radius:10px; padding:16px 16px 24px 16px; }
         .stat-card h3 { margin:0 0 0px 0; font-size:16px; }
         .stat { display:flex; justify-content:space-between; margin:4px 0; opacity:.95; font-size:14px; }
         .stat-table { width:100%; margin-top:6px; border-top:1px solid rgba(255,255,255,.08); }
@@ -104,7 +104,7 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
         .tr.fifty .td { color:#8fd9ff; }
         .tr.four .td, .tr.four .star { color:#ffc17c; }
         .pills { display:flex; flex-wrap:wrap; gap:6px; margin-top:20px; }
-        .pill { position:relative; background:#140d0a; border:1px solid rgba(255,255,255,.12); border-radius:999px; padding:4px 8px; font-size:12px; opacity:.95; }
+        .pill { position:relative; background:#140d0a70; border:1px solid rgba(255,255,255,.12); border-radius:999px; padding:4px 8px; font-size:12px; opacity:.95; }
         /* Fancy grade borders */
         .grade-5 { position: relative; border-radius:10px; }
         .grade-5::after { content:""; position:absolute; inset:0; padding:1px; border-radius:inherit; opacity:0.6; background: linear-gradient(45deg, #b1c0ec, #efefef, #c4ffff, #efefef, #e4c2d3, #efefef, #c6a9f9, #ba7f96, #efefef, #c4ffff); -webkit-mask: linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0); mask: linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0); -webkit-mask-composite: xor; mask-composite: exclude; pointer-events:none; background-size:150% auto; }
@@ -122,7 +122,7 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
         .five-row { display:flex; align-items:center; justify-content:space-between; gap:8px; padding:6px 0; border-top:1px solid rgba(255,255,255,.06); }
         .five-left { display:inline-flex; align-items:center; gap:8px; font-size:12px;}
         .five-right { display:inline-flex; align-items:center; gap:12px; opacity:.85; font-size:12px; }
-        details { margin-top:20px; background:#0c0806; border:1px solid rgba(255,255,255,.06); border-radius:8px; padding:6px 10px; }
+        details { margin-top:20px; background:#0c080691; border:1px solid rgba(255,255,255,.06); border-radius:8px; padding:6px 10px; }
         details > summary { cursor:pointer; list-style:none; font-size:13px; color: #ededed }
         details > summary::marker { display:none; }
         details > summary::before { content:'+'; display:inline-block; width:16px; margin-right:6px; opacity:.8; }
@@ -138,13 +138,13 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
         .url-btn.primary:hover { background:#5a3727; }
         .url-btn.secondary:hover { background:#2a1a13; }
         .url-info { opacity:.85; font-size:14px; white-space:pre-line; }
-        .url-status { line-height:1.6; font-size:14px; }
+        .url-status { line-height:1.6; font-size:14px; color: #ffe0e0 }
 
         /* Overview grid */
         .overview-grid { display:grid; grid-template-columns: repeat(3, minmax(220px,1fr)); gap:12px; }
         @media (max-width: 1200px) { .overview-grid { grid-template-columns: repeat(2, minmax(160px,1fr)); } }
         @media (max-width: 640px) { .overview-grid { grid-template-columns: 1fr; } }
-        .overview-card { background:#0e0a08; border:1px solid rgba(255,255,255,.12); border-radius:10px; padding:16px; }
+        .overview-card { background:#3d3030; border:1px solid rgba(255,255,255,.12); border-radius:10px; padding:16px; }
         .overview-card h3 { margin:0 0 0px 0; font-size:16px; display:flex; align-items:center; gap:8px; }
         .overview-rows { display:grid; grid-template-columns: 1.4fr 1fr 1fr 1fr; gap:6px; margin-top:6px; }
         .overview-label { opacity:.85; font-size:12px; grid-column: 1 / -1; margin-top:6px; }
