--- a/privacy.html
+++ b/privacy.html
@@ -7,7 +7,7 @@
   <title>Privacy Policy - Lufel.net</title>
 </head>
 <body>
-  <h1>Privacy Policy for EU/EEA Visitors</h1>
+  <h1>Privacy Policy</h1>
 
   <p>At <strong>lufel.net</strong>, we use third-party services, including <strong>Google AdSense</strong>, to serve advertisements on our website. These services may use cookies and similar technologies to collect data from your device for advertising purposes.</p>
 
